feat:implement all the menu bar functions

--- a/Resources.qrc
+++ b/Resources.qrc
@@ -1,2 +1,11 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/imgs">
+        <file>assets/Copy.bmp</file>
+        <file>assets/Cut.bmp</file>
+        <file>assets/DeleteSticky.bmp</file>
+        <file>assets/New.bmp</file>
+        <file>assets/Open.bmp</file>
+        <file>assets/Paste.bmp</file>
+        <file>assets/Save.bmp</file>
+    </qresource>
+</RCC>
